Utilizando método da classe na View

--- a/MyPages/Pages/Index.cshtml
+++ b/MyPages/Pages/Index.cshtml
@@ -6,6 +6,20 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Essa é a Index </h1>
+    <h1 class="display-2">Essa é a Index </h1>
     <p class="alert-info"> - Obverva aê. Este texto é em um body </p>
 </div>
+
+@{
+
+        foreach (var item in IndexModel.lista())
+        {
+
+        <option>
+            @item
+        </option>
+
+        }
+    
+}
+
