--- a/MyPages/Pages/Shared/_Layout.cshtml
+++ b/MyPages/Pages/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link text-dark" onmousemove="MyAlert()" asp-page="/WelcomePage"> Opção Personalizada</a>
+                            <a class="nav-link text-dark" onmouseup="MyAlert()" asp-page="/WelcomePage"> Opção Personalizada</a>
                         </li>
                     </ul>
                 </div>
