--- a/MyPages/Pages/Shared/_Layout.cshtml
+++ b/MyPages/Pages/Shared/_Layout.cshtml
@@ -37,7 +37,7 @@
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
-        <p class="active"> @ViewBag.Message; </p>
+        <p class="active"> @ViewBag.Message </p>
     </div>
 
     <footer class="border-top footer text-muted">
