Observação sobre Data Annotations e rotas

--- a/MyPages/Pages/Movies/Index.cshtml
+++ b/MyPages/Pages/Movies/Index.cshtml
@@ -5,10 +5,10 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Página Inicial</h1>
 
 <p>
-    <a asp-page="Create">Create New</a>
+    <a asp-page="Create">Criar novo filme</a>
 </p>
 <table class="table">
     <thead>
@@ -52,3 +52,10 @@
 }
     </tbody>
 </table>
+<p class="badge badge-info">
+    @ViewBag.Detalhe
+</p>
+
+<script>
+
+</script>
