--- a/MyPages/Pages/Shared/_Layout.cshtml
+++ b/MyPages/Pages/Shared/_Layout.cshtml
@@ -21,12 +21,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
-                        </li>
 
                         <li class="nav-item">
                             <a class="nav-link text-dark" onmouseup="MyAlert()" asp-page="/WelcomePage"> Opção Personalizada</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-info" asp-page="/Movies/Index"> Filmes </a>
                         </li>
                     </ul>
                 </div>
