--- a/MyPages/Pages/Movies/Delete.cshtml
+++ b/MyPages/Pages/Movies/Delete.cshtml
@@ -36,6 +36,13 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Movies.Price)
         </dd>
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Movies.Rating)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Movies.Rating)
+        </dd>
+
     </dl>
     
     <form method="post">
