--- a/MyPages/Pages/Movies/Edit.cshtml
+++ b/MyPages/Pages/Movies/Edit.cshtml
@@ -35,6 +35,11 @@
                 <span asp-validation-for="Movies.Price" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Movies.Rating" class="control-label"></label>
+                <input asp-for="Movies.Rating" class="form-control" />
+                <span asp-validation-for="Movies.Rating" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
