Criando um exemplo de escola, ao projeto.

--- a/MyPages/Pages/Movies/Index.cshtml
+++ b/MyPages/Pages/Movies/Index.cshtml
@@ -68,10 +68,43 @@
 }
     </tbody>
 </table>
-<p class="badge badge-info">
+<p class="badge badge-info text-lg-center">
     @ViewBag.Detalhe
 </p>
+<hr />
 
-<script>
-
-</script>
+<div class="row mb-auto">
+    <div class="col-md-4">
+        <div class="row no-gutters border mb-4">
+            <div class="col p-4 mb-4 ">
+                <p class="card-text">
+                    A partir daqui, irei criar uma maneira diferente a acrescentar alguns outros modelos para o exemplo da aplicação.
+                </p>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-4">
+        <div class="row no-gutters border mb-4">
+            <div class="col p-4 d-flex flex-column position-static">
+                <p class="card-text mb-auto">
+                    Este é um exemplo, seguido através da documentação oficial do Asp Net Core MVC.
+                </p>
+                <p>
+                    <a href="https://docs.microsoft.com/aspnet/core/data/ef-rp/intro" class="stretched-link"> Mais exemplos.</a>
+                </p>
+            </div>
+        </div>
+    </div>
+    <div class="col-md-4">
+        <div class="row no-gutters border mb-4">
+            <div class="col p-4 d-flex flex-column">
+                <p class="card-text mb-auto">
+                    Outros exemplos em meu GitHub.
+                </p>
+                <p>
+                    <a href="https://github.com/johnatanlima" class="stretched-link"> Clique aqui</a>
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
